añadiendo en la creacion de cuenta CustomerType
